[#1636] Fix navigation bar display on IE 9
Some of the buttons used a fixed width while others just expanded
as necessary to fill the windo'w width.
Switch to a 25% width to get a predictable layout.

--- a/prewikka/htdocs/css/style.less
+++ b/prewikka/htdocs/css/style.less
@@ -231,6 +231,7 @@ label.required:after {
     td {
         text-align: center;
         font-size: 9pt;
+        width: 25%;
         /*font-weight: bold;*/
     }
 }
@@ -242,14 +243,12 @@ label.required:after {
 }
 
 .message_list_nav_button {
-    width: 50px;
     height: 15px;
     background: #E2EBF5;
     border: 1px solid @border;
 }
 
 .message_list_nav_button_empty {
-    width: 50px;
     height: 15px;
     background: @active-background;
     border: 1px solid @border;
